--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="game-title">Minesweeper</h1>
-        <div id="grid"></div>
+        <h1>Minesweeper Game</h1>
+        <div id="game-grid" class="grid"></div>
+        <h1 id="game-message" class="hidden"></h1>
     </div>
-    <script src="script.js"></script>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
