Update index.html for task minesweeper-c1-round-100

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Minesweeper Game</h1>
-        <div id="game-grid" class="grid"></div>
-        <h1 id="game-message" class="hidden"></h1>
+        <h1 id="gameTitle">Minesweeper</h1>
+        <button id="resetButton">Reset Game</button>
+        <div id="minesweeperGrid"></div>
     </div>
-
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
