Update index.html for task minesweeper-c1-round-100

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="gameTitle">Minesweeper</h1>
-        <button id="resetButton">Reset Game</button>
-        <div id="minesweeperGrid"></div>
+        <h1></h1>
+        <div class="grid"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
